--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,8 +1,5 @@
 {% extends "base.html.twig" %}
 
-{% block body %}
-
-
-<h1>Trou du cul</h1>
-
+{% block contenu %}
+<h1>Accueil</h1>
 {% endblock %}
