--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
         {% endblock %}
     </head>
     <body>
+        {% block contenu %}{% endblock %}
+
         {% block body %}{% endblock %}
     </body>
 </html>
