--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,20 +3,32 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
+
         {% block stylesheets %}
             {#{{ encore_entry_link_tags('app') }}#}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
         {% endblock %}
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
+
 
     </head>
+    <header>
+
+        <ul>
+            <li><a href="{{ path('app_register') }}">Inscription</a></li>
+
+            <li><a href="{{ path('app_login') }}">Connection</a></li>
+
+            <li><a href="{{ path('app_logout') }}">Deconnection</a></li>
+
+            <li><a href="{{ path('main_home') }}">HOME</a></li>
+        </ul>
+
+
+    </header>
     <body>
+
         {% block contenu %}{% endblock %}
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
