formulaire creer sortie

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,8 @@
             <li><a href="{{ path('app_logout') }}">Deconnection</a></li>
 
             <li><a href="{{ path('main_home') }}">HOME</a></li>
+
+            <li><a href="{{ path('sortie_creerSortie')}}">Creer Sortie</a></li>
         </ul>
 
 
