--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,11 +3,15 @@
 {% block title %}Register{% endblock %}
 
 {% block contenu %}
-    <h1>Register</h1>
-
+    <h1>INSCRIPTION</h1>
+<div class="offset-5 col-6">
     {{ form_start(registrationForm) }}
+    <div class="col-4">
         {{ form_widget(registrationForm)}}
+    </div>
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+
+    <button type="submit" class="btn btn-dark">Register</button>
+    {{ form_end(registrationForm) }}</div>
+
 {% endblock %}
