--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,10 +14,12 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+
+    <div class="offset-4 col-3 text-center">
+    <h1 class="h3 mb-3 font-weight-normal text-center">Veuillez vous connecter</h1>
     <label for="inputEmail">Email</label>
     <input type="text" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
+    <label for="inputPassword">Mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
@@ -26,13 +28,14 @@
 
         <div class="checkbox mb-3">
             <label>
-                <input type="checkbox" name="_remember_me"> Remember me
+                Se Souvenir de moi <input type="checkbox" name="_remember_me">
             </label>
         </div>
 
 
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        Connexion
     </button>
+    </div>
 </form>
 {% endblock %}
