--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,11 @@
                                 <a class="nav-link" href="{{ path('app_register') }}">Nouvel utilisateur</a>
                             </li>
                         {% endif %}
+                        {% if app.user() %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Mon profil</a>
+                            </li>
+                        {% endif %}
                         {% if not app.user() %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
