modif sur entite sortie

--- a/templates/sortie/creerSortie.html.twig
+++ b/templates/sortie/creerSortie.html.twig
@@ -7,7 +7,7 @@
         <div class="offset-1 col-4">
             {{ form_widget(formulaireSortie)}}
         </div>
-        <button type="submit" class="btn">Enregistrer</button>
+        <button type="submit" class="btn btn-dark">Enregistrer</button>
         {{ form_end(formulaireSortie)}}
     </div>
 
