--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
                         </li>
                         {% if app.user %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('sortie_creerSortie') }}">Créer Sortie</a>
+                                <a class="nav-link" href="{{ path('sortie_creerSortie',{'id': app.user.id}) }}">Créer Sortie</a>
                             </li>
                         {% endif %}
                         {% if is_granted('ROLE_ADMIN') %}
