--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,1 +1,8 @@
 {% extends "base.html.twig" %}
+
+{% block contenu %}
+    {# {% for sortie in listSortie %}
+        <a href="#">{{ sortie.nom }}</a>
+    {% endfor %} #}
+
+{% endblock %}
