--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,11 @@
                                 <a class="nav-link" href="{{ path('sortie_creerSortie',{'id': app.user.id}) }}">Créer Sortie</a>
                             </li>
                         {% endif %}
+                        {% if app.user %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('sortie_listSorties') }}">Liste des sorties</a>
+                            </li>
+                        {% endif %}
                         {% if is_granted('ROLE_ADMIN') %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('app_register') }}">Nouvel utilisateur</a>
