ajout liens a list

--- a/templates/sortie/listSorties.html.twig
+++ b/templates/sortie/listSorties.html.twig
@@ -12,9 +12,9 @@
                                     <th>Clôture</th>
                                     <th>inscrits/places</th>
                                     <th>Etat</th>
-                                   <!-- <td>Inscrit</td> -->
+                                   <!-- <th>Inscrit</th> -->
                                     <th>Organisateur</th>
-                                    <!--<td>Action</td> -->
+                                    <th>Action</th>
                                 </tr>
                                 </thead>
                                     <tbody id="myTbody">
@@ -32,7 +32,10 @@
                         <td>3</td>
                         <td>4</td>
                         <td>5</td>
-                        <td>6</td>
+                        <td>
+                            <a href="" id="btnSinscrire" class="">S'inscrire</a>
+                        </td>
+
                 </tr>
         </template>
 
