--- a/templates/sortie/listSorties.html.twig
+++ b/templates/sortie/listSorties.html.twig
@@ -33,7 +33,7 @@
                         <td>4</td>
                         <td>5</td>
                         <td>
-                            <a href="" id="btnSinscrire" class="">S'inscrire</a>
+                            <a href="" id="btnSinscrire" class="btn btn-close-white">S'inscrire</a>
                         </td>
 
                 </tr>
