--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,6 +1,13 @@
 {% extends "base.html.twig" %}
 
 {% block contenu %}
+    <div class="container">
+        <div class="row">
+            <div class="offset-2 col-8">
+                <img class="col-12" src="{{ asset('img/imageSoiree.jpg') }}" alt="photo accueil">
+            </div>
+        </div>
+    </div>
 
 
 {% endblock %}
