afficherSortie.html.twig + afficherUnProfil.html.twig

--- a/templates/sortie/listSorties.html.twig
+++ b/templates/sortie/listSorties.html.twig
@@ -36,6 +36,7 @@
                             <a  href="" id="btnSinscrire" class=" col-4 btn btn-light">S'inscrire</a>
                             <a  href="" id="btnSedesister" class="col-4 btn btn-light">Se Désister</a>
                             <a  href="" id="btnModifierSortie" class=" col-4 btn btn-light">Modifier</a>
+                            <a  href="" id="btnAfficher" class=" col-4 btn btn-light">Afficher</a>
 
                         </td>
 
