Commit Modifier Sortie et Se Désister dans le controller

--- a/templates/sortie/creerSortie.html.twig
+++ b/templates/sortie/creerSortie.html.twig
@@ -8,8 +8,8 @@
         {{ form_start(formulaireSortie)}}
 
             {{ form_widget(formulaireSortie)}}
-            <button type="submit" class="btn btn-dark">Enregistrer</button>
-            <button type="submit" class="btn btn-dark">Publier la sortie</button>
+            <button type="submit" class="btn btn-dark" name="Enregistrer">Enregistrer</button>
+            <button type="submit" class="btn btn-dark" name="Publier">Publier la sortie</button>
             <button type="reset" class="btn btn-dark">Annuler</button>
         {{ form_end(formulaireSortie)}}
         </div>
