--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -31,11 +31,14 @@
                 Se Souvenir de moi <input type="checkbox" name="_remember_me">
             </label>
         </div>
-
+        <div>
+            <a class="btn btn-dark"  href="{{ path('app_forgot_password_request') }}">Modifier Mot De Passe</a>
+        </div>
 
     <button class="btn btn-lg btn-primary" type="submit">
         Connexion
     </button>
     </div>
 </form>
+
 {% endblock %}
