afficherSortie.html.twig + afficherUnProfil.html.twig

--- a/templates/profil/afficherUnProfil.html.twig
+++ b/templates/profil/afficherUnProfil.html.twig
@@ -19,7 +19,7 @@
                 Campus: {{ utilisateur.campus.nom}}
             </div>
 
-            {{ utilisateur.image }}
+            {# <img src="{{ asset('/img/'~utilisateur.image) }}" alt="photo de profil">#}
         </div>
     </div>
 {% endblock %}
