--- a/templates/sortie/creerSortie.html.twig
+++ b/templates/sortie/creerSortie.html.twig
@@ -29,8 +29,5 @@
     </div>
 
     <script src="{{ asset('js/formButton.js') }}"></script>
-
-    <script src="{{ asset('js/filtreVille.js') }}">
-
-    </script>
+    <script src="{{ asset('js/filtreVille.js') }}"></script>
 {% endblock %}
