--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
                         </li>
                         {% if app.user %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('sortie_creerSortie',{'id': app.user.id}) }}">Créer Sortie</a>
+                                <a class="nav-link" href="{{ path('sortie_creerSortie') }}">Créer Sortie</a>
                             </li>
                         {% endif %}
                         {% if app.user %}
@@ -42,6 +42,7 @@
                         {% if is_granted('ROLE_ADMIN') %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('app_register') }}">Nouvel utilisateur</a>
+                                <a class="nav-link" href=""></a>
                             </li>
                         {% endif %}
                         {% if app.user() %}
