--- a/templates/profil/afficherUnProfil.html.twig
+++ b/templates/profil/afficherUnProfil.html.twig
@@ -19,7 +19,8 @@
                 Campus: {{ utilisateur.campus.nom}}
             </div>
 
-            {# <img src="{{ asset('/img/'~utilisateur.image) }}" alt="photo de profil">#}
+            {#<img src="{{ asset('/img/'~utilisateur.image) }}" width="100px" height="300px" alt="photo de profil">#}
+
         </div>
     </div>
 {% endblock %}
