--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="offset-2 col-8">
                 <img class="col-12" src="{{ asset('img/header-tours-evenements.jpg') }}" style="margin-top: 30px " alt="photo accueil">
-                <h3 style="margin-left: 95px">Bienvenue Sur Le 1er Site de France d'Evenementiel </h3>
+                <h3 style="margin-left: 95px">Bienvenue sur le 1er site Français d'évenements</h3>
             </div>
         </div>
     </div>
