--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,8 +15,8 @@
     {% endif %}
 
 
-    <div class="offset-4 col-3 text-center">
-    <h1 class="h3 mb-3 font-weight-normal text-center">Veuillez vous connecter</h1>
+    <div class="offset-4 col-3">
+    <h1 class="h3 mb-3 font-weight-normal">Veuillez vous connecter</h1>
     <label for="inputEmail">Email</label>
     <input type="text" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
     <label for="inputPassword">Mot de passe</label>
@@ -25,19 +25,24 @@
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
-
-        <div class="checkbox mb-3">
+    <div class="row">
+        <div class="checkbox mb-3 col-6 my-3">
             <label>
                 Se Souvenir de moi <input type="checkbox" name="_remember_me">
             </label>
         </div>
+
+
+        <button class="btn btn-lg btn-primary my-3 col-4 offset-1 " type="submit">
+            Connexion
+        </button>
+    </div>
+
         <div>
-            <a class="btn btn-dark"  href="{{ path('app_forgot_password_request') }}">Modifier Mot De Passe</a>
+            <a  href="{{ path('app_forgot_password_request') }}">Mot De Passe Oublié</a>
         </div>
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Connexion
-    </button>
+
     </div>
 </form>
 
