--- a/templates/profil/monprofil.html.twig
+++ b/templates/profil/monprofil.html.twig
@@ -8,17 +8,18 @@
 <div id="form" class="offset-4 col-6" style="margin-top:-250px">
     <h2>Modifier mon profil</h2>
 
-    {{ form_start(modifform) }}
+    {{ form_start(modifform, { 'attr' : { 'id' : 'formModifierProfil' }}) }}
     <div class="col-4">
     {{ form_widget(modifform) }}
     </div>
-    <button type="submit" class="btn btn-dark">Enregistrer</button>
-    <a type="submit" class="btn btn-dark" href="{{ path('main_home') }}">Annuler</a>
 
+    <input type="hidden" value="1" id="infoProfil" name="infoProfil">
     {{ form_end(modifform) }}
+    <button onclick="modifyProfile()" class="btn btn-dark" name="Enregistrer">Enregistrer</button>
+    <a class="btn btn-dark" href="{{ path('main_home') }}">Annuler</a>
     </div>
 
-
+    <script src="{{ asset('js/formButtonModifyProfile.js') }}"></script>
 
 {% endblock %}
 
