--- a/templates/gestion/gestionApp.html.twig
+++ b/templates/gestion/gestionApp.html.twig
@@ -33,7 +33,7 @@
     </div>
     <script>
         function villeSubmit(){
-            document.querySelector('#formville').submit();
+            document.querySelector('#formVille').submit();
         }
     </script>
 {% endblock %}
