--- a/templates/gestion/gestionApp.html.twig
+++ b/templates/gestion/gestionApp.html.twig
@@ -2,14 +2,21 @@
 
 {% block contenu %}
     <div class="container">
-        <div class="row">
             <div class=" offset-4 col-4">
                 <button type="button" class="btn btn-primary col-12 my-5" data-bs-toggle="modal" data-bs-target="#villeModal">
                     Nouvelle Ville
                 </button>
             </div>
-            <div class="col"></div>
-        </div>
+            <div class="offset-4 col-4">
+                <button type="button" class="btn btn-primary col-12 my-5" data-bs-toggle="modal" data-bs-target="#supprimerModal">
+                    Supprimer Utilisateur
+                </button>
+            </div>
+            <div class="offset-4 col-4">
+                <button type="button" class="btn btn-primary col-12 my-5" data-bs-toggle="modal" data-bs-target="#ajouterModal">
+                    Ajouter Utilisateur
+                </button>
+            </div>
     </div>
     <div class="modal" tabindex="-1" id="villeModal">
         <div class="modal-dialog">
@@ -31,9 +38,71 @@
             </div>
         </div>
     </div>
+    <div class="modal" tabindex="-1" id="supprimerModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Supprimer Utilisateur</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th class="col-2">Pseudo</th>
+                            <th class="col-4">Nom</th>
+                            <th class="col-4">prenom</th>
+                            <th class="col-4">supprimer</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for utilisateur in utilisateurs %}
+                            <tr>
+                                <td>{{ utilisateur.pseudo }}</td>
+                                <td>{{ utilisateur.nom }}</td>
+                                <td>{{ utilisateur.prenom }}</td>
+                                {#  <button type="button" class="btn btn-primary" onclick=""><i class="bi bi-trash-fill"></i></button>#}
+                                <td><a class="btn btn-danger" href="{{ path('gestion_supprimer_utilisateur', {'id': utilisateur.id}) }}">
+                                        <i class="fa fa-trash"></i>
+                                    </a></td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal" tabindex="-1" id="ajouterModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Nouvel Utilisateur</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    {{ form_start(registrationForm,{'action': path('app_register'), 'attr': {'id':'formAjouter'}}) }}
+                    {{ form_widget(registrationForm) }}
+
+                    {{ form_end(registrationForm) }}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" onclick="ajouterSubmit()">Enregister</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script>
         function villeSubmit(){
-            document.querySelector('#formville').submit();
+            document.querySelector('#formVille').submit();
+        }
+        function ajouterSubmit(){
+            document.querySelector('#formAjouter').submit();
         }
     </script>
 {% endblock %}
