Ca va etre la merde a cause des Services.php

--- a/templates/profil/monprofil.html.twig
+++ b/templates/profil/monprofil.html.twig
@@ -20,7 +20,7 @@
     {#<a class="btn btn-dark mt-3" href="{{ path('modifiermotdepasse', {'id' : app.user.id }) }}">Modifier mot de passe</a>#}
     </div>
 <div class="offset-4 col-4">
-    <button type="button" class="btn btn-primary col-4 my-2" data-bs-toggle="modal" data-bs-target="#mdpModal">
+    <button type="button" class="btn-sm btn-danger small col-4 my-2" data-bs-toggle="modal" data-bs-target="#mdpModal">
         Modifier Mot de Passe
     </button>
 </div>
