--- a/templates/profil/monprofil.html.twig
+++ b/templates/profil/monprofil.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block contenu %}
+
     <div style="display: flex; justify-content: flex-start; margin-top:90px;margin-left:80px;border-radius:10px;height:250px;width:200px">
         <img src="{{ asset('/img/'~app.user.image) }}" alt="" width="300" style=" border-radius:10px">
     </div>
@@ -17,8 +18,9 @@
     {{ form_end(modifform) }}
     <button onclick="modifyProfile()" class="btn btn-dark mt-3" name="Enregistrer">Enregistrer</button>
     <a class="btn btn-dark mt-3" href="{{ path('main_home') }}">Annuler</a>
-    {#<a class="btn btn-dark mt-3" href="{{ path('modifiermotdepasse', {'id' : app.user.id }) }}">Modifier mot de passe</a>#}
     </div>
+
+
 <div class="offset-4 col-4">
     <button type="button" class="btn btn-primary col-4 my-2" data-bs-toggle="modal" data-bs-target="#mdpModal">
         Modifier Mot de Passe
@@ -39,8 +41,8 @@
                 {{  form_end(mdpform) }}
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" onclick="modifierMdpSubmit()">Enregister</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                    <button type="button" class="btn btn-primary" onclick="modifierMdpSubmit()">Enregistrer</button>
                 </div>
             </div>
         </div>
