service update etat

--- a/templates/sortie/listSorties.html.twig
+++ b/templates/sortie/listSorties.html.twig
@@ -12,7 +12,7 @@
                                     <th>Clôture</th>
                                     <th>inscrits/places</th>
                                     <th>Etat</th>
-                                   <!-- <th>Inscrit</th> -->
+                                    <th>Inscrit</th>
                                     <th>Organisateur</th>
                                     <th class="col-4">Action</th>
                                 </tr>
@@ -31,7 +31,8 @@
                         <td>2</td>
                         <td>3</td>
                         <td>4</td>
-                        <td>5</td>
+                        <td><i class="fas fa-check"></i></td>
+                        <td>6</td>
                         <td>
                             <a  href="" id="btnSinscrire" class=" col-4 btn btn-light">S'inscrire</a>
                             <a  href="" id="btnSedesister" class="col-4 btn btn-light">Se Désister</a>
