--- a/templates/sortie/modifierSortie.html.twig
+++ b/templates/sortie/modifierSortie.html.twig
@@ -2,12 +2,17 @@
 {% block contenu %}
     <div id="formulaireModifierSortie" class="offset-4 col-6">
         <h2>Modifier la sortie</h2>
-        {{ form_start(formulaireModifierSortie) }}
+        {{ form_start(formulaireModifierSortie, { 'attr': {'id' : 'formModifierSortie'}}) }}
         <div class="col-4">
         {{ form_widget(formulaireModifierSortie) }}
         </div>
-        <button type="submit" class="btn btn-dark">Modifier</button>
+        <input type="hidden" value="1" id="infoSortie" name="infoSortie">
+
         {{ form_end(formulaireModifierSortie) }}
-        <a type="submit" class="btn btn-dark" href="{{ path('sortie_annulerSortie', {id : id }) }}">Annuler Sortie</a>
+        <button onclick="modifierSortie()" class="btn btn-dark mt-3" name="Modifier">Modifier</button>
+        <button onclick="publierSortie()" class="btn btn-dark mt-3" name="Publier">Publier</button>
+        <a type="submit" class="btn btn-dark mt-3" href="{{ path('sortie_annulerSortie', {id : id }) }}">Annuler Sortie</a>
     </div>
+
+    <script src="{{ asset('js/modifierSortieBouton.js') }}"></script>
 {% endblock %}
