archives admin bootstrap , publier dans modifier , etats

--- a/templates/sortie/creerSortie.html.twig
+++ b/templates/sortie/creerSortie.html.twig
@@ -16,13 +16,16 @@
             </select>
             <div class="row">
                 <label class="form-label" for="lieu">Lieu: </label>
+                <div class="col-8">
                 <select class="form-control " name="lieu" id="lieu">
 
-
                 </select>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#lieuModal">
+                </div>
+                <div class=" col-4">
+                <button type="button" class="btn btn-primary  col-6 " data-bs-toggle="modal" data-bs-target="#lieuModal">
                     <i class="fa fa-plus"></i>
                 </button>
+                </div>
             </div>
             
 
