--- a/templates/gestion/gestionApp.html.twig
+++ b/templates/gestion/gestionApp.html.twig
@@ -102,7 +102,7 @@
             </div>
         </div>
     </div>
-    <div class="modal" tabindex="-1" id="supprimerModal">
+    <div class="modal" tabindex="-1" id="archivesModal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -114,23 +114,20 @@
                         <thead>
                         <tr>
                             <th class="col-2">Nom de la sortie</th>
-                            <th class="col-4">Date de la sortie</th>
-                            <th class="col-4">Clôture</th>
-                            <th class="col-4">inscrits/places</th>
-                            <th class="col-4">Etat</th>
-                            <th class="col-4">Inscrit</th>
+                           {#<th class="col-4">Date de la sortie</th> #}
+                           {#<th class="col-4">Clôture</th>#}
                             <th class="col-4">Organisateur</th>
                         </tr>
                         </thead>
                         <tbody>
-                        {% for utilisateur in utilisateurs %}
+                        {% for archive in archives %}
                             <tr>
-                                <td>{{ utilisateur.pseudo }}</td>
-                                <td>{{ utilisateur.nom }}</td>
-                                <td>{{ utilisateur.prenom }}</td>
-                                {#  <button type="button" class="btn btn-primary" onclick=""><i class="bi bi-trash-fill"></i></button>#}
-                                <td><a class="btn btn-danger" href="{{ path('gestion_supprimer_utilisateur', {'id': utilisateur.id}) }}">
-                                        <i class="fa fa-trash"></i>
+                                <td>{{ archive.nom }}</td>
+                                {# <td>{{ archive.dateHeureDebut|date('Y-m-d H:i') }}</td> #}
+                                {# <td>{{ archive.dateLimiteInscription }}</td> #}
+                                <td>{{ archive.organisateur.pseudo }}</td>
+                                <td><a class="btn btn-dark" href="{{ path('sortie_afficherSortie', {'id': archive.id}) }}">
+                                        <i class="fa-solid fa-arrow-right"></i>
                                     </a></td>
                             </tr>
                         {% endfor %}
