--- a/templates/sortie/listSorties.html.twig
+++ b/templates/sortie/listSorties.html.twig
@@ -52,7 +52,7 @@
                                     <th>Etat</th>
                                     <th>Inscrit</th>
                                     <th>Organisateur</th>
-                                    <th class="col-4">Action</th>
+                                    <th class="col-5">Action</th>
                                 </tr>
                                 </thead>
                                     <tbody id="myTbody">
@@ -72,11 +72,20 @@
                         <td><i class="fas fa-check"></i></td>
                         <td>6</td>
                         <td>
-                            <a  href="" id="btnSinscrire" class=" col-4 btn btn-light">S'inscrire</a>
-                            <a  href="" id="btnSedesister" class="col-4 btn btn-light">Se Désister</a>
-                            <a  href="" id="btnModifierSortie" class=" col-4 btn btn-light">Modifier</a>
-                            <a  href="" id="btnAfficher" class=" col-4 btn btn-light">Afficher</a>
-
+                            <div class="row">
+                                <div class="col-3">
+                            <a  href="" id="btnSinscrire" class="  btn btn-light">S'inscrire</a>
+                                </div>
+                                <div class="col-3">
+                            <a  href="" id="btnSedesister" class="c btn btn-light">Se Désister</a>
+                                </div>
+                                <div class="col-3">
+                            <a  href="" id="btnModifierSortie" class="  btn btn-light">Modifier</a>
+                                </div>
+                                <div class="col-3">
+                            <a  href="" id="btnAfficher" class="btn btn-light">Afficher</a>
+                                </div>
+                            </div>
                         </td>
 
                 </tr>
