--- a/templates/sortie/modifierSortie.html.twig
+++ b/templates/sortie/modifierSortie.html.twig
@@ -1,13 +1,20 @@
 {% extends "base.html.twig" %}
 {% block contenu %}
-    <div id="formulaireModifierSortie" class="offset-4 col-6">
-        <h2>Modifier la sortie</h2>
+    <div class="row">
+    <div id="formulaireModifierSortie" class="offset-4 col-4">
+        <h2 class="text-center">Modifier la sortie</h2>
+
         {{ form_start(formulaireModifierSortie) }}
-        <div class="col-4">
+        <div class=" offset-2 col-8">
         {{ form_widget(formulaireModifierSortie) }}
         </div>
-        <button type="submit" class="btn btn-dark">Modifier</button>
+        <button type="submit" class="offset-2 btn btn-dark">Modifier</button>
         {{ form_end(formulaireModifierSortie) }}
-        <a type="submit" class="btn btn-dark" href="{{ path('sortie_annulerSortie', {id : id }) }}">Annuler Sortie</a>
+
+        <a type="submit" class="offset-2 btn btn-dark" href="{{ path('sortie_annulerSortie', {'id': sortie.id }) }}">Annuler Sortie</a>
+    </div>
+    <div class="col-4">
+        <a type="submit" class="btn btn-dark" href="{{ path('sortie_publier_sortie', {'id' : sortie.id }) }}">Publier Sortie</a>
+    </div>
     </div>
 {% endblock %}
